Фикс бага с перессылкой на разные страницы после авторизации